src/objects/Client__c.object
<CustomObject>
    <fields>
        <fullName>Address_Mailing__c</fullName>
        <description>Mandatory if the 'Check if Mailing address is similar to Present Address' checkbox is checked</description>
        <label>Mailing Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_Same_As_SubjectProperty__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address_Same_As_SubjectProperty</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Check_if_Mailing_Address_is_similar_to_P__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this checkbox is checked then the next address, state, city and zip fields need not be visible on the page; otherwise they must be filled</description>
        <inlineHelpText>If this checkbox is checked then the next address, state, city and zip fields need not be filled on the page; otherwise they must be filled</inlineHelpText>
        <label>Mailing Address equals Present Address</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City_Mailing__c</fullName>
        <description>Mandatory if the 'Check if Mailing address is similar to Present Address' checkbox is checked</description>
        <label>Mailing City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>Current City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Address_Same_As_Primary_Client__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client_Address_Same_As_Primary_Client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Client_State__c</fullName>
        <label>Current State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Client_has_Email_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Client has Email Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>Cannot be the Future date</description>
        <label>Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Email_Optional__c</fullName>
        <label>Client Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>FHA_Insured_Loan__c</fullName>
        <label>FHA Insured Loan</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Yes</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Phone__c</fullName>
        <description>Validate it to phone format -10 digits, not starting with 0 and must not accept all same digits like 4444444444</description>
        <label>Home Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>If_yes_Name_of_POA__c</fullName>
        <label>If yes, Name of POA</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsNBSAvaliable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>field data will true if nbs is added into client at client level</description>
        <label>Is Non-Borrowing Spouse Available?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Client_Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Make true when edit and save from Start new loan tab</description>
        <label>Is Client Validated?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Non_Borrowing_Resident__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Non Borrowing Resident Filled ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Non_Borrowing_Spouse_Filled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>At Loan Level</description>
        <label>Is Non Borrowing Spouse Filled ?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_there_a_POA__c</fullName>
        <label>Is there a POA?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoanId</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>ClientDetails</relationshipLabel>
        <relationshipName>Clients</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Marital_Status__c</fullName>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Middle_Name__c</fullName>
        <label>Middle Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Income__c</fullName>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Date_of_Birth__c</fullName>
        <description>Can't be the future date</description>
        <label>Non-Borrowing Spouse Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Relation__c</fullName>
        <label>Non-Borrower Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Separated</fullName>
                    <isActive>false</isActive>
                    <label>Separated</label>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                    <isActive>false</isActive>
                    <label>Unmarried</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Resident__c</fullName>
        <label>Non-Borrowing Resident</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Spouse_Addres__c</fullName>
        <label>Non-Borrowing Spouse Address</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Spouse_City__c</fullName>
        <label>Non-Borrowing Spouse City</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Spouse_Name__c</fullName>
        <label>Non-Borrowing Spouse Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Spouse_Phone_Number__c</fullName>
        <description>Must be filled in the UI and mandatory in the backend if the Non-Borrowing spouse picklist is marked as yes, otherwise this section must be hidden in the UI</description>
        <inlineHelpText>must be in phone format, should not accept 0 as starting number and should not take all continuous same digits like 7777777777</inlineHelpText>
        <label>Non-Borrowing Spouse Phone Number</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Spouse_State__c</fullName>
        <label>Non-Borrowing Spouse State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Spouse_Zip__c</fullName>
        <description>Can have only numbers and one - (Hyphen)</description>
        <label>Non-Borrowing Spouse Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_Borrowing_Spouse__c</fullName>
        <label>Non-Borrowing Spouse</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone_Number__c</fullName>
        <label>Mobile Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Place_of_Celebration__c</fullName>
        <label>Place of Celebration</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Client_for_the_Loan__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary Client for the Loan</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Property_type__c</fullName>
        <label>Property type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Single Family</fullName>
                </value>
                <value>
                    <fullName>Condo-Attached</fullName>
                </value>
                <value>
                    <fullName>Condo-Detached</fullName>
                </value>
                <value>
                    <fullName>Condo-Site</fullName>
                </value>
                <value>
                    <fullName>PUD detached</fullName>
                </value>
                <value>
                    <fullName>2 to 4 Unit property</fullName>
                </value>
                <value>
                    <fullName>Townhouse - Attached PUD</fullName>
                </value>
                <value>
                    <fullName>Co-op</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residence__c</fullName>
        <label>Residence</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>Rent Free</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Social_Security_Number__c</fullName>
        <description>Validate it to be a proper Social security number; Try to mask it with * if possible</description>
        <label>Social Security Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spouse_Mailing_Address_same_as_client__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Whether the spouse mailing address is same as client</description>
        <label>Spouse_Mailing_Address_same_as_client</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State_Mailing__c</fullName>
        <description>Mandatory if the 'Check if Mailing address is similar to Present Address' checkbox is checked</description>
        <label>Mailing State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>US_States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>Current State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street_Address__c</fullName>
        <label>Current Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Zip_Mailing__c</fullName>
        <description>Mandatory if the 'Check if Mailing address is similar to Present Address' checkbox is checked</description>
        <label>Mailing Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Current Zip</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Number_of_years__c</fullName>
        <description>Must be greater than 0</description>
        <label>Number of years in current address</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Private</externalSharingModel><label>Client</label><nameField>
        <label>Client Name</label>
        <type>Text</type>
    </nameField><pluralLabel>Clients</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility>
    <sharingReasons>
        <fullName>LoanProcessor__c</fullName>
        <label>Loan Processor</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Loan_Officer__c</fullName>
        <label>Loan Officer</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Origination_Loan_Officer__c</fullName>
        <label>Origination Loan Officer</label>
    </sharingReasons>
</CustomObject>